# pineappleRLH200x8

./: .gitignore  ACTIVATE_ENV.md  ARCHITECTURE_SUMMARY.md  CMakeLists.txt  FIX_NUMPY_LINUX.md  FIX_PYTORCH_LINUX.md  FRIDAY_PROGRESS.md  LEAN_REBOOT_KEEP_REMOVE.md  LINUX_SERVER_SETUP.md  LINUX_SETUP.md  Optimization_Summary.md  QUICK_START.md  README.md  REBUILD_LINUX.md  ROADMAP_LEAN.md  SEQUENTIAL_TRAINING.md  SETUP_INSTRUCTIONS.md  SFL_PORT_NOTES.md  TEST_ARCHITECTURE.md  TRAINING_FLOW.md  WINDOWS_SETUP.md  action_selection.py  analyze_training.py  collect_sfl_dataset_cpp.py  cpp_sfl_structure.txt  debug_policy_net_boards.py  debug_training.py  demo.py  evaluate_policy_net_single_player.py  evaluate_rl_policy.py  fix_pybind11.sh  generate_sfl_dataset.py  ofc_env.py  ofc_scoring.py  ofc_types.py  parallel_collect_sfl.py  policy_net.py  policy_net_policy.py  pyproject.toml  requirements.txt  (+24 more)
benchmarks/: bench_env.py
cpp/: CMakeLists.txt  ofc_actions.cpp  ofc_cpp.cpp  ofc_encode.cpp  ofc_engine.cpp  ofc_score.cpp  ofc_step.cpp  sfl_policy.cpp  sfl_policy.h
include/: BeamSearchPolicy.hpp  BotPolicy.hpp  Deck.hpp  FeatureExtractor.hpp  GameState.hpp  HandEvaluator.hpp  LearnedPolicy.hpp  MonteCarloPolicy.hpp  Rules.hpp  Scoring.hpp  Trainer.hpp  TrainingLogger.hpp
tests/: test_checkpoint_schedule.py  test_env_round0.py  test_parallel_generation.py  test_scoring_equivalence.py  test_sfl_policy.py
